tests/integration/errors/test_operator_wrong_param_count.sn
# Error test: operator == must have exactly one parameter

struct Point =>
  x: int
  y: int

  operator == (): bool =>
    return true

fn main(): void =>
  var p1: Point = {
    x: 1,
    y: 2
  }
  var p2: Point = {
    x: 1,
    y: 2
  }
  var eq: bool = p1 == p2
  print($"{eq}\n")
